--- a/pc.html
+++ b/pc.html
@@ -21,7 +21,59 @@
 </head>
 
 <body>
-  <h1>Brackets Cheat Sheet</h1>
+  <h1><img src="img/Brackets_icon.svg">Brackets Cheat Sheet</h1>
+  
+  <div class="main">
+    <h2>Workspace</h2>
+    <div class="shortcuts">
+      <h3>Shortcuts</h3>
+      <ul>
+        <li><strong>Ctrl++</strong> Increase Font Size</li>
+        <li><strong>Ctrl+-</strong> Decrase Font Size</li>
+        <li><strong>Ctrl+0</strong> Return to Default </li>
+        <li><strong>Ctrl+Shift+H</strong> Hide/Show the Sidebar</li>
+        <li><strong>Ctrl+Alt+P</strong> Live Preview</li>
+        <li><strong>Ctrl+Shift+C</strong> Live Preview Highlight</li>
+        <li><strong>From menu</strong> Turn Line Numbers on/off </li>
+        <li><strong>From menu</strong> Turn Word Wrap on/off </li>        
+      </ul>      
+    </div>
+    <div class="notes">
+      <h3>Notes</h3>
+      <ul>
+        <li>Working Files can be sorted by name, type or order added by clicking on the Gear icon</li>
+        <li>Or you can drag them into your own desired order.</li>
+        <li>Change Projects by clicking on the project name and choosing a different project</li>
+        <li>Set your tab/spacing preferences at the bottom right corner by clicking on Tab/Spaces and the number</li>
+        <li>Look at the bottom status bar for information on Linting Errors, current line/column and more</li>
+      </ul>      
+    </div>
+    
+    <h2>Opening Closing/Files</h2>
+    <div class="shortcuts">
+      <h3>Keyboard Shortcuts</h3>
+      <ul>
+        <li><strong>Ctrl+Shift+O</strong> Quick Open</li>
+        <li><strong>Ctrl+W</strong> Close Current File</li>
+        <li><strong>Ctrl+Shift+W</strong> Close All Files</li>
+        <li><strong>Ctrl+O</strong> Open a File</li>
+        <li><strong>Ctrl+N</strong> New File</li>
+        <li><strong>Ctrl+Alt+R</strong> Switch Project</li>
+        <li><strong>F2</strong>Rename current file</li>    
+      </ul>
+    </div>
+    
+    <div class="notes">
+      <h3>Notes</h3>
+      <ul>
+        <li>You can drag a file from Explorer/Finder into Brackets to open it</li>
+        <li>You can open files by right-clicking on them and opening in Brackets</li>
+        <li>Setting the default open to Brackets will depend on your operating system</li>
+        <li>Right-click on files/folders in sidebar to rename, delete or reveal in Explorer/Finder</li>
+      </ul>    
+    </div>    
+  </div>
+  
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>
     window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')
