--- a/pc.html
+++ b/pc.html
@@ -13,8 +13,6 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -29,7 +27,7 @@
       <h3>Shortcuts</h3>
       <ul>
         <li><strong>Ctrl++</strong> Increase Font Size</li>
-        <li><strong>Ctrl+-</strong> Decrase Font Size</li>
+        <li><strong>Ctrl+-</strong> Decrease Font Size</li>
         <li><strong>Ctrl+0</strong> Return to Default </li>
         <li><strong>Ctrl+Shift+H</strong> Hide/Show the Sidebar</li>
         <li><strong>Ctrl+Alt+P</strong> Live Preview</li>
@@ -70,6 +68,30 @@
         <li>You can open files by right-clicking on them and opening in Brackets</li>
         <li>Setting the default open to Brackets will depend on your operating system</li>
         <li>Right-click on files/folders in sidebar to rename, delete or reveal in Explorer/Finder</li>
+      </ul>    
+    </div>    
+    
+    <h2>Writing/Editing Code</h2>
+    <div class="shortcuts">
+      <h3>Keyboard Shortcuts</h3>
+      <ul>
+        <li><strong>Ctrl+X</strong> Delete/Cut line/selection</li>
+        <li><strong>Ctrl+D</strong> Duplicate line/selection</li>
+        <li><strong>Ctrl+C</strong> Copy line/selection</li>
+        <li><strong>Ctrl+V</strong> Paste line/selection</li>
+        <li><strong>Ctrl+/</strong> Single line comment</li>
+        <li><strong>Ctrl+Shift+/</strong> Block comment</li>
+        <li><strong>Ctrl+Enter</strong> Add a new line after the current line</li>
+        <li><strong>Ctrl+Shift+Enter</strong> Add a new line before the current line</li>
+      </ul>
+    </div>
+    
+    <div class="notes">
+      <h3>Notes</h3>
+      <ul>
+        <li>When using a shortcut to copy/delete/cut code, if you have a selection made, that is what will get copied or cut. If you don't have an active selection, the current line will get copied or cut.</li>
+        <li>You can get comments to line up with your code if you select all the text on the line and do a block comment instead of a single line comment.</li>
+        <li>When copying a block of code, make sure you select from the beginning of the first line to the end of the last line, instead of just the beginning and the end of text.</li>        
       </ul>    
     </div>    
   </div>
