--- a/pc.html
+++ b/pc.html
@@ -94,6 +94,41 @@
         <li>When copying a block of code, make sure you select from the beginning of the first line to the end of the last line, instead of just the beginning and the end of text.</li>        
       </ul>    
     </div>    
+    
+    <h2>Cursor Placement</h2>
+    <div class="shortcuts">
+      <h3>Mac Keyboard Shortcuts</h3>
+      <ul>
+        <li><strong>→</strong> Move to the left</li>
+        <li><strong>←</strong> Move to the right</li>
+        <li><strong>↑</strong> Move up one line</li>
+        <li><strong>↓</strong> Move down one line</li>
+        <li><strong>Alt+→</strong> Move to next word</li>
+        <li><strong>Alt+←</strong> Move to previous word</li>
+        <li><strong>Cmd+→</strong> Move to the end of line</li>
+        <li><strong>Cmd+←</strong> Move to to the beginning of the line</li>
+        <li><strong>Cmd+↑</strong> Move to to the beginning of file</li>
+        <li><strong>Cmd+↓</strong> Move to to the end of file</li>
+        <li><strong>Ctrl+Alt+↑</strong> Scroll up</li>
+        <li><strong>Ctrl+Alt+↓</strong> Scroll down</li>    
+      </ul>
+      
+      <h3>PC Keyboard Shortcuts</h3>
+      <ul>
+        <li><strong>→</strong> Move to the left</li>
+        <li><strong>←</strong> Move to the right</li>
+        <li><strong>↑</strong> Move up one line</li>
+        <li><strong>↓</strong> Move down one line</li>
+        <li><strong>Ctrl+→</strong> Move to next word</li>
+        <li><strong>Ctrl+←</strong> Move to previous word</li>
+        <li><strong>Alt+→</strong> Move to the end of line</li>
+        <li><strong>Alt+←</strong> Move to to the beginning of the line</li>
+        <li><strong>Ctrl+Home</strong> Move to to the beginning of file</li>
+        <li><strong>Ctrl+End</strong> Move to to the end of file</li>
+        <li><strong>Ctrl+↑</strong> Scroll up</li>
+        <li><strong>Ctrl+↓</strong> Scroll down</li>           
+      </ul>
+    </div>    
   </div>
   
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
