--- a/pc.html
+++ b/pc.html
@@ -106,9 +106,9 @@
         <li><strong>Alt+→</strong> Move to next word</li>
         <li><strong>Alt+←</strong> Move to previous word</li>
         <li><strong>Cmd+→</strong> Move to the end of line</li>
-        <li><strong>Cmd+←</strong> Move to to the beginning of the line</li>
-        <li><strong>Cmd+↑</strong> Move to to the beginning of file</li>
-        <li><strong>Cmd+↓</strong> Move to to the end of file</li>
+        <li><strong>Cmd+←</strong> Move to the beginning of the line</li>
+        <li><strong>Cmd+↑</strong> Move to the beginning of file</li>
+        <li><strong>Cmd+↓</strong> Move to the end of file</li>
         <li><strong>Ctrl+Alt+↑</strong> Scroll up</li>
         <li><strong>Ctrl+Alt+↓</strong> Scroll down</li>    
       </ul>
@@ -122,13 +122,60 @@
         <li><strong>Ctrl+→</strong> Move to next word</li>
         <li><strong>Ctrl+←</strong> Move to previous word</li>
         <li><strong>Alt+→</strong> Move to the end of line</li>
-        <li><strong>Alt+←</strong> Move to to the beginning of the line</li>
-        <li><strong>Ctrl+Home</strong> Move to to the beginning of file</li>
-        <li><strong>Ctrl+End</strong> Move to to the end of file</li>
+        <li><strong>Alt+←</strong> Move to the beginning of the line</li>
+        <li><strong>Ctrl+Home</strong> Move to the beginning of file</li>
+        <li><strong>Ctrl+End</strong> Move to the end of file</li>
         <li><strong>Ctrl+↑</strong> Scroll up</li>
         <li><strong>Ctrl+↓</strong> Scroll down</li>           
       </ul>
     </div>    
+
+    <h2>Selecting Text</h2>
+    <div class="shortcuts">
+      <h3>Mac Keyboard Shortcuts</h3>
+      <ul>
+        <li><strong>Ctrl+L</strong> Select the current line</li>
+        <li><strong>Cmd+B</strong> Select the current word</li>
+        <li><strong>Cmd+A</strong> Select the entire file</li>
+        <li><strong>Shift+→</strong> Move to the left</li>
+        <li><strong>Shift+←</strong> Move to the right</li>
+        <li><strong>Shift+↑</strong> Move up one line</li>
+        <li><strong>Shift+↓</strong> Move down one line</li>
+        <li><strong>Shift+Alt+→</strong> Move to next word</li>
+        <li><strong>Shift+Alt+←</strong> Move to previous word</li>
+        <li><strong>Shift+Cmd+→</strong> Move to the end of line</li>
+        <li><strong>Shift+Cmd+←</strong> Move to the beginning of the line</li>
+        <li><strong>Shift+Cmd+↑</strong> Move to the beginning of file</li>
+        <li><strong>Shift+Cmd+↓</strong> Move to the end of file</li>
+        <li><strong>Ctrl+Alt+↑</strong> Scroll up</li>
+        <li><strong>Ctrl+Alt+↓</strong> Scroll down</li>    
+      </ul>
+      
+      <h3>PC Keyboard Shortcuts</h3>
+      <ul>
+        <li><strong>Ctrl+L</strong> Select the current line</li>
+        <li><strong>Ctrl+B</strong> Select the current word</li>
+        <li><strong>Ctrl+A</strong> Select the entire file</li>
+        <li><strong>Shift+→</strong> Move to the left</li>
+        <li><strong>Shift+←</strong> Move to the right</li>
+        <li><strong>Shift+↑</strong> Move up one line</li>
+        <li><strong>Shift+↓</strong> Move down one line</li>
+        <li><strong>Shift+Ctrl+→</strong> Move to next word</li>
+        <li><strong>Shift+Ctrl+←</strong> Move to previous word</li>
+        <li><strong>Shift+Alt+→</strong> Move to the end of line</li>
+        <li><strong>Shift+Alt+←</strong> Move to the beginning of the line</li>
+        <li><strong>Shift+Ctrl+Home</strong> Move to the beginning of file</li>
+        <li><strong>Shift+Ctrl+End</strong> Move to the end of file</li>
+        <li><strong>Ctrl+↑</strong> Scroll up</li>
+        <li><strong>Ctrl+↓</strong> Scroll down</li>           
+      </ul>
+    </div>    
+    <div class="notes">
+      <h3>Notes</h3>
+      <ul>
+        <li>The PC and Mac shortcuts have some more complicated differences than normal for this section, so make sure you understand how it works on your system.</li>
+      </ul>    
+    </div>     
   </div>
   
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
