Find and Replace, separate Mac and PC

--- a/mac.html
+++ b/mac.html
@@ -9,7 +9,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Brackets Cheat Sheet–PC</title>
+  <title>Brackets Cheat Sheet–Mac</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,900,400italic' rel='stylesheet' type='text/css'>
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <h1><img src="img/Brackets_icon.svg">Brackets Cheat Sheet – PC</h1>
+  <h1><img src="img/Brackets_icon.svg">Brackets Cheat Sheet – Mac</h1>
   
   <div class="main">
     <section>
@@ -27,12 +27,12 @@
       <div class="shortcuts">
         <h3>Keyboard Shortcuts</h3>
         <ul>
-          <li><strong>Ctrl++</strong> Increase Font Size</li>
-          <li><strong>Ctrl+-</strong> Decrease Font Size</li>
-          <li><strong>Ctrl+0</strong> Return to Default </li>
-          <li><strong>Ctrl+Shift+H</strong> Hide/Show the Sidebar</li>
-          <li><strong>Ctrl+Alt+P</strong> Live Preview</li>
-          <li><strong>Ctrl+Shift+C</strong> Live Preview Highlight</li>
+          <li><strong>Cmd++</strong> Increase Font Size</li>
+          <li><strong>Cmd+-</strong> Decrease Font Size</li>
+          <li><strong>Cmd+0</strong> Return to Default </li>
+          <li><strong>Cmd+Shift+H</strong> Hide/Show the Sidebar</li>
+          <li><strong>Cmd+Alt+P</strong> Live Preview</li>
+          <li><strong>Cmd+Shift+C</strong> Live Preview Highlight</li>
           <li><strong>From menu</strong> Turn Line Numbers on/off </li>
           <li><strong>From menu</strong> Turn Word Wrap on/off </li>        
         </ul>      
@@ -54,12 +54,12 @@
       <div class="shortcuts">
         <h3>Keyboard Shortcuts</h3>
         <ul>
-          <li><strong>Ctrl+Shift+O</strong> Quick Open</li>
-          <li><strong>Ctrl+W</strong> Close Current File</li>
-          <li><strong>Ctrl+Shift+W</strong> Close All Files</li>
-          <li><strong>Ctrl+O</strong> Open a File</li>
-          <li><strong>Ctrl+N</strong> New File</li>
-          <li><strong>Ctrl+Alt+R</strong> Switch Project</li>
+          <li><strong>Cmd+Shift+O</strong> Quick Open</li>
+          <li><strong>Cmd+W</strong> Close Current File</li>
+          <li><strong>Cmd+Shift+W</strong> Close All Files</li>
+          <li><strong>Cmd+O</strong> Open a File</li>
+          <li><strong>Cmd+N</strong> New File</li>
+          <li><strong>Cmd+Alt+R</strong> Switch Project</li>
           <li><strong>F2</strong>Rename current file</li>    
         </ul>
       </div>
@@ -80,14 +80,14 @@
       <div class="shortcuts">
         <h3>Keyboard Shortcuts</h3>
         <ul>
-          <li><strong>Ctrl+X</strong> Delete/Cut line/selection</li>
-          <li><strong>Ctrl+D</strong> Duplicate line/selection</li>
-          <li><strong>Ctrl+C</strong> Copy line/selection</li>
-          <li><strong>Ctrl+V</strong> Paste line/selection</li>
-          <li><strong>Ctrl+/</strong> Single line comment</li>
-          <li><strong>Ctrl+Shift+/</strong> Block comment</li>
-          <li><strong>Ctrl+Enter</strong> Add a new line after the current line</li>
-          <li><strong>Ctrl+Shift+Enter</strong> Add a new line before the current line</li>
+          <li><strong>Cmd+X</strong> Delete/Cut line/selection</li>
+          <li><strong>Cmd+D</strong> Duplicate line/selection</li>
+          <li><strong>Cmd+C</strong> Copy line/selection</li>
+          <li><strong>Cmd+V</strong> Paste line/selection</li>
+          <li><strong>Cmd+/</strong> Single line comment</li>
+          <li><strong>Cmd+Alt+/</strong> Block comment</li>
+          <li><strong>Cmd+Enter</strong> Add a new line after the current line</li>
+          <li><strong>Cmd+Shift+Enter</strong> Add a new line before the current line</li>
         </ul>
       </div>
 
@@ -104,32 +104,33 @@
     <section>
       <h2>Cursor Placement</h2>
       <div class="shortcuts">
-        <h3>PC Keyboard Shortcuts</h3>
+        <h3>Mac Keyboard Shortcuts</h3>
         <ul>
           <li><strong>→</strong> Move to the left</li>
           <li><strong>←</strong> Move to the right</li>
           <li><strong>↑</strong> Move up one line</li>
           <li><strong>↓</strong> Move down one line</li>
-          <li><strong>Ctrl+→</strong> Move to next word</li>
-          <li><strong>Ctrl+←</strong> Move to previous word</li>
-          <li><strong>Alt+→</strong> Move to the end of line</li>
-          <li><strong>Alt+←</strong> Move to the beginning of the line</li>
-          <li><strong>Ctrl+Home</strong> Move to the beginning of file</li>
-          <li><strong>Ctrl+End</strong> Move to the end of file</li>
-          <li><strong>Ctrl+↑</strong> Scroll up</li>
-          <li><strong>Ctrl+↓</strong> Scroll down</li>           
+          <li><strong>Alt+→</strong> Move to next word</li>
+          <li><strong>Alt+←</strong> Move to previous word</li>
+          <li><strong>Cmd+→</strong> Move to the end of line</li>
+          <li><strong>Cmd+←</strong> Move to the beginning of the line</li>
+          <li><strong>Cmd+↑</strong> Move to the beginning of file</li>
+          <li><strong>Cmd+↓</strong> Move to the end of file</li>
+          <li><strong>Ctrl+Alt+↑</strong> Scroll up</li>
+          <li><strong>Ctrl+Alt+↓</strong> Scroll down</li>    
         </ul>
+
       </div>    
     </section>
 
     <section>
       <h2>Selecting Code</h2>
       <div class="shortcuts">
-        <h3>PC Keyboard Shortcuts</h3>
+        <h3>Mac Keyboard Shortcuts</h3>
         <ul>
           <li><strong>Ctrl+L</strong> Select the current line</li>
-          <li><strong>Ctrl+B</strong> Select the current word</li>
-          <li><strong>Ctrl+A</strong> Select all the text</li>
+          <li><strong>Cmd+B</strong> Select the current word</li>
+          <li><strong>Cmd+A</strong> Select all the text</li>
           <li><strong>Shift+→</strong> Select the next character</li>
           <li><strong>Shift+←</strong> Select the previous character</li>
           <li><strong>Shift+↑</strong> Select the previous line</li>
@@ -138,9 +139,10 @@
           <li><strong>Shift+Alt+←</strong> Select previous word</li>
           <li><strong>Shift+Cmd+→</strong> Select to the end of line</li>
           <li><strong>Shift+Cmd+←</strong> Select to the beginning of line</li>
-          <li><strong>Shift+Cmd+Home</strong> Select to the beginning of file</li>
-          <li><strong>Shift+Cmd+End</strong> Select to the end of file</li>
+          <li><strong>Shift+Cmd+↑</strong> Select to the beginning of file/li>
+          <li><strong>Shift+Cmd+↓</strong> Select to the end of file</li>
         </ul>
+
       </div>
 
       <div class="notes">
@@ -156,10 +158,10 @@
       <div class="shortcuts">
         <h3>Keyboard Shortcuts</h3>
         <ul>
-          <li><strong>Ctrl+Shift+↑</strong> Move current line/selection up</li>
-          <li><strong>Ctrl+Shift+↓</strong> Move current line/selection down</li>
-          <li><strong>Ctrl+]</strong> Indent Right</li>
-          <li><strong>Ctrl+[</strong> Indent Left</li>
+          <li><strong>Cmd+Ctrl+↑</strong> Move current line/selection up</li>
+          <li><strong>Cmd+Ctrl+↓</strong> Move current line/selection down</li>
+          <li><strong>Cmd+]</strong> Indent Right</li>
+          <li><strong>Cmd+[</strong> Indent Left</li>
           <li><strong>Tab</strong> Indent Right (when lines are selected) </li>
           <li><strong>Shift+Tab</strong> Indent Left</li>
         </ul>
@@ -171,11 +173,11 @@
       <div class="shortcuts">
         <h3>Keyboard Shortcuts</h3>
           <ul>
-            <li><strong>Ctrl+E</strong> Open/Close Quick Edit</li>
+            <li><strong>Cmd+E</strong> Open/Close Quick Edit</li>
             <li><strong>Alt+↓</strong> Go to next rule in list</li>
             <li><strong>Alt+↑</strong> Go to previous rule in list</li>
             <li><strong>Esc</strong> Close Quick Edit </li>
-            <li><strong>Ctrl+N</strong> Create a New Rule</li>
+            <li><strong>Cmd+N</strong> Create a New Rule</li>
           </ul>
       </div>
 
@@ -195,12 +197,12 @@
       <div class="shortcuts">
         <h3>Keyboard Shortcuts</h3>
         <ul>
-          <li><strong>Ctrl+F</strong> Find</li>
-          <li><strong>F3</strong> Find Next</li>
-          <li><strong>Shift+F3</strong> Find Previous</li>
-          <li><strong>Ctrl+Shift+F</strong> Find in Files</li>
-          <li><strong>Ctrl+H</strong> Replace</li>
-          <li><strong>Ctrl+Shift+H</strong> Replace in Files</li>
+          <li><strong>Cmd+F</strong> Find</li>
+          <li><strong>Cmd+G</strong> Find Next</li>
+          <li><strong>Cmd+Shift+G</strong> Find Previous</li>
+          <li><strong>Cmd+Shift+F</strong> Find in Files</li>
+          <li><strong>Alt+Cmd+F</strong> Replace</li>
+          <li><strong>Alt+Shift+Cmd+F</strong> Replace in Files</li>
         </ul>
       </div>
  
