Navigation, Adding Javascript

--- a/mac.html
+++ b/mac.html
@@ -254,7 +254,7 @@
           <li><strong>Cmd+J</strong> Jump to Definition</li>
           <li><strong>Cmd+Shift+O</strong> Quick Open </li>
           <li><strong>Cmd+T</strong> Go to Definition </li>
-          <li><strong>Cmd+G</strong> Go to Line </li>
+          <li><strong>Cmd+L</strong> Go to Line </li>
           <li><strong>Cmd+K</strong> Quick Docs </li>
         </ul>
       </div>
